<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">悦呼</string>
    <string name="net_state_disconnect_msg">断网状态，无法正常通话</string>
    
    <string name="login_in">登录</string>
    <string name="login_in_title">登录悦呼</string>
    <string name="login_input_phone_hint">手机号</string>
    <string name="login_input_password_hint">密码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="logining">登录中</string>
    
    <string name="toast_phone_is_null">手机号码不能为空</string>
    <string name="toast_phone_is_not_right">手机号码输入有误</string>
    <string name="toast_pwd_is_null">密码不能为空</string>
    
    <string name="register">注册</string>
    <string name="submit">提交</string>
    <string name="register_title">注册悦呼</string>
    <string name="register_country_code">中国（+86）</string>
    <string name="register_confirm_phone_number">确认手机号</string>
    <string name="register_confirm_phone_number_info">悦呼将发送验证码短信到这个号码：</string>
    <string name="register_input_phone_number_hint">请输入手机号</string>
    <string name="register_input_create_hint">创建密码</string>
    <string name="register_agree_and_accept_ycall">同意并接受悦呼</string>
    <string name="register_service_terms">《服务条款》</string>
    <string name="register_sms_verification_code_has_send_to">短信验证码已发送至：</string>
    <string name="register_get_sms_verification_code">获取短信验证码</string>
    <string name="register_input_sms_verification_code_hint">输入验证码</string>
    <string name="register_toast_pwd_length_longer">至少输入5位密码</string>
    <string name="register_toast_verify_code_is_null">验证码不能为空</string>
    <string name="register_dialog_getting_verify_code">正在获取验证码</string>
    <string name="register_dialog_registing">正在注册</string>
    <string name="register_toast_get_sms_verify_code">请注意查收短信</string>
    <string name="register_toast_has_get_sms_verify_code">验证码已获取</string>
    <string name="register_toast_ok">注册成功</string>
    
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    
    <string name="fav">收藏</string>
    <string name="relationship">关系</string>
    <string name="discovery">发现</string>
    <string name="me">我的</string>
    
    <string name="top_msg">消息</string>
    <string name="top_search">搜索</string>
    <string name="details">详情</string>
    
    <string name="top_search_hint">请输入企业名称</string>
    <string name="toast_search">请输入企业名称</string>
    <string name="dialog_searching">搜索中</string>
    <string name="toast_no_search_result">没有搜索到结果</string>
    <string name="toast_star_ok">关注成功</string>
    <string name="toast_unstar_ok">取消关注成功</string>
    
    <string name="add_attention">+关注</string>
    <string name="delete_attention">取消关注</string>
    
    
    <string name="input_phone_number_et_hint">请输入电话号码</string>
    
    <string name="no_fav">暂无收藏</string>
    <string name="no_history">暂无通话记录</string>
    <string name="no_search">可查找企业、客服人员</string>
    
    
    <string name="game">游戏</string>
    
    <string name="change_password">修改密码</string>
    <string name="equipment_management">设备管理</string>
    <string name="free_setting">免打扰设置</string>
    <string name="blacklist">黑名单</string>
    
    <string name="internet_phone_book">网络电话本</string>
    <string name="friend">朋友</string>
    <string name="attention_to_business">我的关注</string>
    <string name="local_phone_book">本地通讯录</string>
    
    <string name="no_attention_to_business">暂无关注</string>
    <string name="to_find_business">去找企业</string>
    <string name="no_friend">暂无朋友</string>
    <string name="to_find_friend">去找朋友</string>
    <string name="no_internet_phone_book">暂无任何联系人</string>
    <string name="no_internet_phone_book_hint">请上传手机通讯录到网络电话本</string>
    <string name="upload">上传</string>
    
    <string name="call_state_ing_1">呼叫中</string>
    <string name="call_state_ing_2">通话中</string>
    <string name="call_mt">免提</string>
    <string name="call_gj">挂机</string>
    <string name="call_system_info">等待系统电话回呼</string>
	
    
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>





















