<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/top_layout"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rect_has_corner_bg"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/login_input_phone_hint"
                android:textColorHint="@color/input_num_hint"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/normal_font_size_18"
                android:drawableLeft="@drawable/equipment_management"
                android:drawablePadding="8dp"
                android:inputType="phone"
		        android:textCursorDrawable="@null"
		        android:cursorVisible="true"
                android:layout_marginBottom="@dimen/margin_top_bottom_12"
                android:layout_marginTop="@dimen/margin_top_bottom_12"/>
            <include 
                layout="@layout/line"/>
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/login_input_password_hint"
                android:textColorHint="@color/input_num_hint"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/normal_font_size_18"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
		        android:textCursorDrawable="@null"
		        android:cursorVisible="true"
		        android:layout_marginBottom="@dimen/margin_top_bottom_12"
                android:layout_marginTop="@dimen/margin_top_bottom_12"/>"
        </LinearLayout>
        <Button 
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login_in"
            android:textSize="@dimen/normal_font_size_18"
            android:textColor="@color/c_ffffffff"
            android:background="@drawable/btn_bg_1"/>
        <Button 
            android:id="@+id/forget_pwd_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login_forget_password"
            android:textSize="@dimen/normal_font_size_18"
            android:textColor="@color/theme_green_1"
            android:background="@null"/>
         
    </LinearLayout>

</LinearLayout>
