<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_bottom_height_2"
    android:orientation="horizontal" 
    android:baselineAligned="false"
    android:background="#aaa">
    <LinearLayout
        android:id="@+id/tab_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal" >
        <ImageView
            android:id="@+id/tab_iv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/tababoutus"/>
        <TextView
            android:id="@+id/tab_tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/tab_tv"
            android:textSize="@dimen/bottom_tab_tv_font_size"
            android:text="@string/fav"/> 
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tab_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal" >
        <ImageView
            android:id="@+id/tab_iv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/tababoutus"/>
        <TextView
            android:id="@+id/tab_tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/tab_tv"
            android:textSize="@dimen/bottom_tab_tv_font_size"
            android:text="@string/relationship"/> 
    </LinearLayout>
    <ImageView
        android:id="@+id/tab_iv_keyboard" 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/green"/>
    <LinearLayout
        android:id="@+id/tab_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal" >
        <ImageView
            android:id="@+id/tab_iv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/tababoutus"/>
        <TextView
            android:id="@+id/tab_tv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/tab_tv"
            android:textSize="@dimen/bottom_tab_tv_font_size"
            android:text="@string/discovery"/> 
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tab_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal" >
        <ImageView
            android:id="@+id/tab_iv_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/tababoutus"/>
        <TextView
            android:id="@+id/tab_tv_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/tab_tv"
            android:textSize="@dimen/bottom_tab_tv_font_size"
            android:text="@string/me"/> 
    </LinearLayout>

</LinearLayout>









