<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/call_bg">
    <RelativeLayout
        android:id="@+id/bottom_layout" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        >
        <LinearLayout 
            android:id="@+id/call_mt_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/call_mt_iv" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/call_mt_selector"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/c_ffffffff"
                android:textSize="@dimen/normal_font_size_14"
                android:text="@string/call_mt"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/call_gj_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/call_mt_ll"
            android:layout_marginLeft="24dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView 
                android:id="@+id/call_gj_iv" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/call_gj_selector"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/c_ffffffff"
                android:textSize="@dimen/normal_font_size_14"
                android:text="@string/call_gj"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/center_layout" 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_marginBottom="8dp"
        >
        <com.fhit.ycall.customview.WaterWaveView
            android:id="@+id/water_wave_view"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            />
        <com.fhit.ycall.customview.CircleImageView
            android:id="@+id/call_photo_ic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:scaleType="centerInside"
            android:src="@drawable/call_user" />
        <TextView
            android:id="@+id/call_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/call_photo_ic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textColor="@color/c_ffffffff"
            android:textSize="@dimen/normal_font_size_24" />
        <TextView
            android:id="@+id/call_state_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/call_name_tv"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/call_state_ing_1"
            android:textColor="@color/c_ffffffff"
            android:textSize="@dimen/normal_font_size_16" />
        <ImageView 
            android:id="@+id/call_state_iv"
            android:layout_width="50dp"
            android:layout_height="18dp"
            android:layout_below="@id/call_state_tv"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:layout_marginTop="8dp"
            android:background="@anim/lian_xian"/>
        <TextView
            android:id="@+id/system_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:text="@string/call_system_info"
            android:textColor="@color/call_system_info"
            android:textSize="@dimen/normal_font_size_14"/>
    </RelativeLayout>
	<!--  -->
	<include layout="@layout/floating_layer"/>
</RelativeLayout>
