<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <include 
        android:id="@+id/top"
        layout="@layout/top_layout"/>
    <LinearLayout 
        android:id="@+id/register_ll_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top"
        android:padding="16dp"
        android:orientation="vertical"
        android:visibility="visible">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rect_has_corner_bg"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="4dp">
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/register_input_phone_number_hint"
                android:textColorHint="@color/input_num_hint"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/normal_font_size_18"
                android:drawableLeft="@drawable/equipment_management"
                android:drawablePadding="8dp"
                android:inputType="phone"
                android:singleLine="true"
		        android:textCursorDrawable="@null"
		        android:cursorVisible="true"
                android:layout_marginBottom="@dimen/margin_top_bottom_16"
                android:layout_marginTop="@dimen/margin_top_bottom_16"/>
            <include 
                layout="@layout/line"/>
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/register_input_create_hint"
                android:textColorHint="@color/input_num_hint"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/normal_font_size_18"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:singleLine="true"
		        android:textCursorDrawable="@null"
		        android:cursorVisible="true"
		        android:layout_marginBottom="@dimen/margin_top_bottom_16"
                android:layout_marginTop="@dimen/margin_top_bottom_16"/>
            <include 
                layout="@layout/line"/>
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_top_bottom_16"
                android:layout_marginBottom="@dimen/margin_top_bottom_16">
                <EditText 
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:background="@drawable/rect_no_corner_bg"
	                android:hint="@string/register_input_sms_verification_code_hint"
	                android:textColorHint="@color/input_num_hint"
	                android:textColor="@color/c_333333"
	                android:textSize="@dimen/normal_font_size_18"
	                android:singleLine="true"
	                android:gravity="center"
			        android:textCursorDrawable="@null"
			        android:cursorVisible="true"
	                android:layout_marginRight="8dp"
	                android:paddingLeft="4dp"
	                android:paddingTop="7dp"
	                android:paddingBottom="7dp"/>
                <Button 
                    android:id="@+id/register_get_sms_verification_code"
                    android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:paddingTop="8dp"
	                android:paddingBottom="8dp"
	                android:textColor="@color/c_ffffffff"
	                android:textSize="@dimen/normal_font_size_16"
	                android:text="@string/register_get_sms_verification_code"
	                android:background="@drawable/btn_bg_2"/>
            </LinearLayout>
        </LinearLayout>
        <Button 
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_bottom_16"
            android:text="@string/register"
            android:textSize="@dimen/normal_font_size_18"
            android:textColor="@color/c_ffffffff"
            android:background="@drawable/btn_bg_1"/>
     </LinearLayout>
     <RelativeLayout 
	    android:id="@+id/floating_layer"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:visibility="gone">
	    <include layout="@layout/floating_layer"/>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
		    android:layout_centerInParent="true"
	        android:padding="18dp">
		    <include 
		        layout="@layout/pop_view_1"/>
	    </LinearLayout>
	</RelativeLayout>
</RelativeLayout>













