<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <RelativeLayout
       android:id="@+id/rl_op_1" 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/user_line_bg_selector">
       <ImageView
           android:id="@+id/icon_left1" 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_marginTop="@dimen/relationship_left_iv_margintop"
           android:layout_marginLeft="@dimen/relationship_left_iv_marginleft"
           android:layout_centerVertical="true"
           android:scaleType="centerInside"
           android:src="@drawable/internet_phone_book"/>
       <ImageView
           android:id="@+id/icon_right1" 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_marginRight="8dp"
           android:layout_centerVertical="true"
           android:scaleType="centerInside"
           android:src="@drawable/arrows_icon"/>
       <TextView 
           android:id="@+id/tv_1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
           android:layout_toRightOf="@id/icon_left1"
           android:layout_marginLeft="@dimen/relationship_tv_marginleft"
           android:textColor="@color/relationship_tv"
           android:textSize="18sp"
           android:text="@string/internet_phone_book"/>
  	</RelativeLayout>
  	
   	<RelativeLayout
       android:id="@+id/rl_op_2" 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/group_bottom_bg">
       <ImageView
           android:id="@+id/icon_left2" 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_marginTop="@dimen/relationship_left_iv_margintop"
           android:layout_marginLeft="@dimen/relationship_left_iv_marginleft"
           android:layout_centerVertical="true"
           android:scaleType="centerInside"
           android:src="@drawable/friend"/>
       <ImageView
           android:id="@+id/icon_right2" 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_marginRight="8dp"
           android:layout_centerVertical="true"
           android:scaleType="centerInside"
           android:src="@drawable/arrows_icon"/>
       <TextView 
           android:id="@+id/tv_2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
           android:layout_toRightOf="@id/icon_left2"
           android:layout_marginLeft="@dimen/relationship_tv_marginleft"
           android:textColor="@color/relationship_tv"
           android:textSize="18sp"
           android:text="@string/friend"/>
  	</RelativeLayout>
  	<include layout="@layout/line"/>
   	<RelativeLayout
       android:id="@+id/rl_op_3" 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/group_interval"
       android:background="@drawable/group_bottom_bg">
       <ImageView
           android:id="@+id/icon_left3" 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
          android:layout_marginTop="@dimen/relationship_left_iv_margintop"
           android:layout_marginLeft="@dimen/relationship_left_iv_marginleft"
           android:layout_centerVertical="true"
           android:scaleType="centerInside"
           android:src="@drawable/attention_to_business"/>
       <ImageView
           android:id="@+id/icon_right3" 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_marginRight="8dp"
           android:layout_centerVertical="true"
           android:scaleType="centerInside"
           android:src="@drawable/arrows_icon"/>
       <TextView 
           android:id="@+id/tv_3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
           android:layout_toRightOf="@id/icon_left3"
           android:layout_marginLeft="@dimen/relationship_tv_marginleft"
           android:textColor="@color/relationship_tv"
           android:textSize="18sp"
           android:text="@string/attention_to_business"/>
  	</RelativeLayout>
  	<include layout="@layout/line"/>
   	<RelativeLayout
       android:id="@+id/rl_op_4" 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/group_interval"
       android:background="@drawable/group_bottom_bg">
       <ImageView
           android:id="@+id/icon_left4" 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_marginTop="@dimen/relationship_left_iv_margintop"
           android:layout_marginLeft="@dimen/relationship_left_iv_marginleft"
           android:layout_centerVertical="true"
           android:scaleType="centerInside"
           android:src="@drawable/local_phone_book"/>
       <ImageView
           android:id="@+id/icon_right4" 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_marginRight="8dp"
           android:layout_centerVertical="true"
           android:scaleType="centerInside"
           android:src="@drawable/arrows_icon"/>
       <TextView 
           android:id="@+id/tv_4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
           android:layout_toRightOf="@id/icon_left4"
           android:layout_marginLeft="@dimen/relationship_tv_marginleft"
           android:textColor="@color/relationship_tv"
           android:textSize="18sp"
           android:text="@string/local_phone_book"/>
  	</RelativeLayout>
	<include layout="@layout/line"/>
</LinearLayout>
